@@ -1,208 +1,0 @@
-/*
- * This class parses items such as signatures which should be converted
- * prior to saving an article.
- */
-package org.jamwiki.parser;
-
-import org.jamwiki.Environment;
-import org.jamwiki.WikiBase;
-import org.jamwiki.utils.LinkUtil;
-import org.jamwiki.utils.WikiLogger;
-import org.jamwiki.utils.WikiLink;
-import org.springframework.util.StringUtils;
-
-%%
-
-%public
-%class JAMWikiPreSaveProcessor
-%extends AbstractLexer
-%type String
-%unicode
-%ignorecase
-
-/* code included in the constructor */
-%init{
-    allowHtml = Environment.getBooleanValue(Environment.PROP_PARSER_ALLOW_HTML);
-    yybegin(NORMAL);
-    states.add(new Integer(yystate()));
-%init}
-
-/* code called after parsing is completed */
-%eofval{
-    StringBuffer output = new StringBuffer();
-    return (output.length() == 0) ? null : output.toString();
-%eofval}
-
-/* code copied verbatim into the generated .java file */
-%{
-    protected static WikiLogger logger = WikiLogger.getLogger(JAMWikiPreSaveProcessor.class.getName());
-    protected boolean allowHtml = false;
-    
-    /**
-     *
-     */
-    public void processLink(String raw) {
-        WikiLink wikiLink = ParserUtil.parseWikiLink(raw);
-        if (!StringUtils.hasText(wikiLink.getDestination())) {
-            return;
-        }
-        if (wikiLink.getNamespace() != null && wikiLink.getNamespace().equals(WikiBase.NAMESPACE_CATEGORY)) {
-            this.parserOutput.addCategory(wikiLink.getDestination(), wikiLink.getText());
-        }
-        if (StringUtils.hasText(wikiLink.getDestination())) {
-            this.parserOutput.addLink(wikiLink.getDestination());
-        }
-    }
-    
-    /**
-     *
-     */
-    public void setParserInput(ParserInput parserInput) throws Exception {
-        this.parserInput = parserInput;
-        // validate parser settings
-        boolean validated = true;
-        if (this.parserInput == null) validated = false;
-        if (this.parserInput.getMode() != ParserInput.MODE_SEARCH) {
-            if (this.parserInput.getContext() == null) validated = false;
-            if (this.parserInput.getVirtualWiki() == null) validated = false;
-            if (this.parserInput.getUserIpAddress() == null) validated = false;
-        }
-        if (!validated) {
-            throw new Exception("Parser info not properly initialized");
-        }
-    }
-%}
-
-/* character expressions */
-newline            = ((\r\n) | (\n))
-whitespace         = {newline} | [ \t\f]
-
-/* nowiki */
-nowikistart        = (<[ ]*nowiki[ ]*>)
-nowikiend          = (<[ ]*\/[ ]*nowiki[ ]*>)
-
-/* pre */
-htmlprestart       = (<[ ]*pre[ ]*>)
-htmlpreend         = (<[ ]*\/[ ]*pre[ ]*>)
-wikiprestart       = (" ") ([^ \t\r\n])
-wikipreend         = ([^ ]) | ({newline})
-
-/* comments */
-htmlcomment        = "<!--" ~"-->"
-
-/* processing commands */
-wikisig3           = "~~~"
-wikisig4           = "~~~~"
-wikisig5           = "~~~~~"
-
-/* wiki links */
-wikilink           = "[[" [^\]\n\r]+ ~"]]"
-
-%state NOWIKI, PRE, WIKIPRE, NORMAL
-
-%%
-
-/* ----- nowiki ----- */
-
-<WIKIPRE, PRE, NORMAL>{nowikistart} {
-    logger.finer("nowikistart: " + yytext() + " (" + yystate() + ")");
-    beginState(NOWIKI);
-    return yytext();
-}
-
-<NOWIKI>{nowikiend} {
-    logger.finer("nowikiend: " + yytext() + " (" + yystate() + ")");
-    endState();
-    return yytext();
-}
-
-/* ----- pre ----- */
-
-<NORMAL>{htmlprestart} {
-    logger.finer("htmlprestart: " + yytext() + " (" + yystate() + ")");
-    if (allowHtml) {
-        beginState(PRE);
-    }
-    return yytext();
-}
-
-<PRE>{htmlpreend} {
-    logger.finer("htmlpreend: " + yytext() + " (" + yystate() + ")");
-    // state only changes to pre if allowHTML is true, so no need to check here
-    endState();
-    return yytext();
-}
-
-<NORMAL, WIKIPRE>^{wikiprestart} {
-    logger.finer("wikiprestart: " + yytext() + " (" + yystate() + ")");
-    // rollback the one non-pre character so it can be processed
-    yypushback(1);
-    if (yystate() != WIKIPRE) {
-        beginState(WIKIPRE);
-    }
-    return yytext();
-}
-
-<WIKIPRE>^{wikipreend} {
-    logger.finer("wikipreend: " + yytext() + " (" + yystate() + ")");
-    endState();
-    // rollback the one non-pre character so it can be processed
-    yypushback(1);
-    return yytext();
-}
-
-/* ----- wiki links ----- */
-
-<NORMAL>{wikilink} {
-    logger.finer("wikilink: " + yytext() + " (" + yystate() + ")");
-    this.processLink(yytext());
-    return yytext();
-}
-
-/* ----- processing commands ----- */
-
-<NORMAL>{wikisig3} {
-    logger.finer("toc: " + yytext() + " (" + yystate() + ")");
-    if (parserInput.getMode() == ParserInput.MODE_SEARCH) {
-        // called from search indexer, no need to parse signatures
-        return yytext();
-    }
-    return ParserUtil.buildWikiSignature(this.parserInput, true, false);
-}
-
-<NORMAL>{wikisig4} {
-    logger.finer("toc: " + yytext() + " (" + yystate() + ")");
-    if (parserInput.getMode() == ParserInput.MODE_SEARCH) {
-        // called from search indexer, no need to parse signatures
-        return yytext();
-    }
-    return ParserUtil.buildWikiSignature(this.parserInput, true, true);
-}
-
-<NORMAL>{wikisig5} {
-    logger.finer("toc: " + yytext() + " (" + yystate() + ")");
-    if (parserInput.getMode() == ParserInput.MODE_SEARCH) {
-        // called from search indexer, no need to parse signatures
-        return yytext();
-    }
-    return ParserUtil.buildWikiSignature(this.parserInput, false, true);
-}
-
-/* ----- comments ----- */
-
-<NORMAL>{htmlcomment} {
-    logger.finer("htmlcomment: " + yytext() + " (" + yystate() + ")");
-    return yytext();
-}
-
-/* ----- other ----- */
-
-<WIKIPRE, PRE, NOWIKI, NORMAL>{whitespace} {
-    // no need to log this
-    return yytext();
-}
-
-<WIKIPRE, PRE, NOWIKI, NORMAL>. {
-    // no need to log this
-    return yytext();
-}
